--- a/products/product.html
+++ b/products/product.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="1300">
     <link rel="stylesheet" href="./../main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,13 +12,20 @@
     <title>product-view</title>
 </head>
 <body>
-    <section class="hero">
+    <div class="wrapper">
+        <section class="hero">
 
-        <header class="header">
-            <a href="#" class="logo">
-                <img src="./../img/web-ready/content/logos/logo-main.png" alt="lost shirt logo"
-                    class="logo__pic">
-            </a>
+            <header class="header">
+                <a href="#" class="logo">
+                    <img src="./../img/web-ready/content/logos/logo-main.png" alt="lost shirt logo"
+                        class="logo__pic">
+                </a>
+                <a href="mailto:lostinspace@mail.ru" class="mail">
+                    <div class="mail__title">По всем вопросам пишити нам:</div>
+                    <div class="mail__content">lostinspace@mail.ru</div>
+                </a>
+            </header>
+    
             <div class="hero__content">
                 <div class="fade-slider">
                     <div class="fade-slider__item fade-slider__item--style-thirts fade-slider__item--visible">
@@ -33,14 +40,7 @@
                     </div>
                 </div>
             </div>
-            <a href="mailto:lostinspace@mail.ru" class="mail">
-                <div class="mail__title">По всем вопросам пишити нам:</div>
-                <div class="mail__content">lostinspace@mail.ru</div>
-            </a>
-        </header>
-
-        
-
-    </section>
+        </section>
+    </div>
 </body>
 </html>
