--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                 <div class="products__desc-text">
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                                 </div>
-                                <a href="#" class="btn">
+                                <a href="./products/product.html" class="btn">
                                     Подробнее
                                 </a>
                             </div>
