--- a/products/product.html
+++ b/products/product.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="1300">
@@ -14,7 +14,6 @@
 <body>
     <div class="wrapper">
         <section class="hero">
-
             <header class="header">
                 <a href="#" class="logo">
                     <img src="./../img/web-ready/content/logos/logo-main.png" alt="lost shirt logo"
@@ -25,7 +24,6 @@
                     <div class="mail__content">lostinspace@mail.ru</div>
                 </a>
             </header>
-    
             <div class="hero__content">
                 <div class="fade-slider">
                     <div class="fade-slider__item fade-slider__item--style-thirts fade-slider__item--visible">
@@ -41,6 +39,211 @@
                 </div>
             </div>
         </section>
+
+        <section class="product">
+            <div class="product__view">
+                <img src="./../img/web-ready/tshirts/tshirt_07.png" alt="футболка черная rick and morty" class="product__img">
+            </div>
+            <div class="product__text">
+                <div class="product__hero">
+                    <div class="product__manufacturer">Футболка Hurley</div>
+                    <h2 class="product__title">rick and morty</h2>
+                    <div class="product__price-amount">2000</div>
+                </div>
+                <div class="product__desc">
+                    <ul class="product__list">
+                        <li class="product__item">Состав: Хлопок 100%</li>
+                        <li class="product__item">Сезон: Мульти</li>
+                        <li class="product__item">Цвет: Черный</li>
+                        <li class="product__item">Узор: Рисуноки и надписи</li>
+                        <li class="product__item">Страна производства: Россия</li>
+                        <li class="product__item">Артикул: MA002EWDOEZ6</li>
+                    </ul>
+                </div>
+                <div class="product__choice">
+                    <ul class="menu-size">
+                        <li class="menu-size__item">
+                            <a href="#" class="munu-size__link">XXS</a>
+                        </li>
+                        <li class="menu-size__item">
+                            <a href="#" class="munu-size__link">XS</a>
+                        </li>
+                        <li class="menu-size__item menu-size__item--active">
+                            <a href="#" class="munu-size__link">S</a>
+                        </li>
+                        <li class="menu-size__item">
+                            <a href="#" class="munu-size__link">M</a>
+                        </li>
+                        <li class="menu-size__item">
+                            <a href="#" class="munu-size__link">L</a>
+                        </li>
+                        <li class="menu-size__item">
+                            <a href="#" class="munu-size__link">XL</a>
+                        </li>
+                        <li class="menu-size__item">
+                            <a href="#" class="munu-size__link">2XL</a>
+                        </li>
+                        <li class="menu-size__item">
+                            <a href="#" class="munu-size__link">3XL</a>
+                        </li>
+                    </ul>
+                    <ul class="menu-color">
+                        <li class="menu-color__item menu-color__item--black menu-color__item--active">
+                            <a href="#" class="munu-color__link"></a>
+                        </li>
+                        <li class="menu-color__item menu-color__item--white">
+                            <a href="#" class="munu-color__link"></a>
+                        </li>
+                        <li class="menu-color__item menu-color__item--green">
+                            <a href="#" class="munu-color__link"></a>
+                        </li>
+                        <li class="menu-color__item menu-color__item--blue">
+                            <a href="#" class="munu-color__link"></a>
+                        </li>
+                        <li class="menu-color__item menu-color__item--red">
+                            <a href="#" class="munu-color__link"></a>
+                        </li>
+                    </ul>
+                    <div class="product__btn">
+                        <a href="#" class="btn__link">купить</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer class="footer">
+            <div class="container footer__container">
+                <nav class="site-menu">
+                    <ul class="site-menu__sections">
+                        <li class="site-menu__col">
+                            <h3 class="site-menu__title">
+                                информация
+                            </h3>
+                            <ul class="site-menu__list">
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">О магазине</a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">Адреса магазинов</a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">Как сделать заказ</a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">Обмен и возврат</a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">Отзывы</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="site-menu__col">
+                            <h3 class="site-menu__title">
+                                футболки
+                            </h3>
+                            <ul class="site-menu__list">
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">Популярное</a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">Новинки</a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">Бестселлеры</a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">Специальные предложения</a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">Скоро в продаже</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="site-menu__col">
+                            <h3 class="site-menu__title">
+                                коллекция
+                            </h3>
+                            <ul class="site-menu__list">
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">Детская коллекция</a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">Женская коллекция</a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">Мужская коллекция</a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">Лучшие принты 2018 года</a>
+                                </li>
+                                <li class="site-menu__item">
+                                    <a href="#" class="site-menu__link">Лучшие принты 2019 года</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="site-menu__col">
+                            <h3 class="site-menu__title">
+                                контактная информация
+                            </h3>
+                            <div class="site-menu__text">
+                                Санкт-Петербург, <br>
+                                ул. Жуковского, д. 12
+                            </div>
+                            <div class="site-menu__text">
+                                <a href="tel.:+78123157235" class="site-menu__text-row">
+                                    Телефон: 8 (812) 315-72-35
+                                </a>
+                                <a href="mailto:support@yourwebsite.com" class="site-menu__text-row">
+                                    Email: support@yourwebsite.com
+                                </a>
+                            </div>
+                        </li>
+                    </ul>
+                </nav>
+                <section class="extras">
+                    <div class="extras__col">
+                        <a href="#" class="extras__best">
+                            лучшие принты <br>
+                            2019 года
+                        </a>
+                    </div>
+                    <div class="extras__col">
+                        <div class="extras__col-socials">
+                            <ul class="socials">
+                                <li class="socials__item">
+                                    <a href="#" class="socials__link">
+                                        <svg class="socials__icons">
+                                            <use xlink:href=".\..\img\web-ready\icons-sprite.svg#fb"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="socials__item">
+                                    <a href="#" class="socials__link">
+                                        <svg class="socials__icons">
+                                            <use xlink:href=".\..\img\web-ready\icons-sprite.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="socials__item">
+                                    <a href="#" class="socials__link">
+                                        <svg class="socials__icons">
+                                            <use xlink:href=".\..\img\web-ready\icons-sprite.svg#insta"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="socials__item">
+                                    <a href="#" class="socials__link">
+                                        <svg class="socials__icons">
+                                            <use xlink:href=".\..\img\web-ready\icons-sprite.svg#pin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
