--- a/products/product.html
+++ b/products/product.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@900&family=Roboto:wght@700&family=Ubuntu&family=Yanone+Kaffeesatz:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link rel="stylesheet" href="./products.css">
+    <link rel="stylesheet" href="./product.css">
     <title>product-view</title>
 </head>
 <body>
@@ -48,7 +48,7 @@
                 <div class="product__hero">
                     <div class="product__manufacturer">Футболка Hurley</div>
                     <h2 class="product__title">rick and morty</h2>
-                    <div class="product__price-amount">2000</div>
+                    <div class="product__price-amount">2 000</div>
                 </div>
                 <div class="product__desc">
                     <ul class="product__list">
@@ -63,45 +63,45 @@
                 <div class="product__choice">
                     <ul class="menu-size">
                         <li class="menu-size__item">
-                            <a href="#" class="munu-size__link">XXS</a>
+                            <a href="#" class="menu-size__link">XXS</a>
                         </li>
                         <li class="menu-size__item">
-                            <a href="#" class="munu-size__link">XS</a>
+                            <a href="#" class="menu-size__link">XS</a>
                         </li>
                         <li class="menu-size__item menu-size__item--active">
-                            <a href="#" class="munu-size__link">S</a>
+                            <a href="#" class="menu-size__link">S</a>
                         </li>
                         <li class="menu-size__item">
-                            <a href="#" class="munu-size__link">M</a>
+                            <a href="#" class="menu-size__link">M</a>
                         </li>
                         <li class="menu-size__item">
-                            <a href="#" class="munu-size__link">L</a>
+                            <a href="#" class="menu-size__link">L</a>
                         </li>
                         <li class="menu-size__item">
-                            <a href="#" class="munu-size__link">XL</a>
+                            <a href="#" class="menu-size__link">XL</a>
                         </li>
                         <li class="menu-size__item">
-                            <a href="#" class="munu-size__link">2XL</a>
+                            <a href="#" class="menu-size__link">2XL</a>
                         </li>
                         <li class="menu-size__item">
-                            <a href="#" class="munu-size__link">3XL</a>
+                            <a href="#" class="menu-size__link">3XL</a>
                         </li>
                     </ul>
                     <ul class="menu-color">
-                        <li class="menu-color__item menu-color__item--black menu-color__item--active">
-                            <a href="#" class="munu-color__link"></a>
+                        <li class="menu-color__item menu-color__item--active">
+                            <a href="#" class="menu-color__link menu-color__link--black"></a>
                         </li>
-                        <li class="menu-color__item menu-color__item--white">
-                            <a href="#" class="munu-color__link"></a>
+                        <li class="menu-color__item">
+                            <a href="#" class="menu-color__link menu-color__link--white"></a>
                         </li>
-                        <li class="menu-color__item menu-color__item--green">
-                            <a href="#" class="munu-color__link"></a>
+                        <li class="menu-color__item">
+                            <a href="#" class="menu-color__link menu-color__link--green" ></a>
                         </li>
-                        <li class="menu-color__item menu-color__item--blue">
-                            <a href="#" class="munu-color__link"></a>
+                        <li class="menu-color__item">
+                            <a href="#" class="menu-color__link menu-color__link--blue"></a>
                         </li>
-                        <li class="menu-color__item menu-color__item--red">
-                            <a href="#" class="munu-color__link"></a>
+                        <li class="menu-color__item">
+                            <a href="#" class="menu-color__link menu-color__link--red"></a>
                         </li>
                     </ul>
                     <div class="product__btn">
