--- a/products/product.html
+++ b/products/product.html
@@ -63,10 +63,10 @@
                 <div class="product__choice">
                     <ul class="menu-size">
                         <li class="menu-size__item">
-                            <a href="#" class="menu-size__link">XXS</a>
+                            <a href="#" class="menu-size__link menu-size__link--cannot">XXS</a>
                         </li>
                         <li class="menu-size__item">
-                            <a href="#" class="menu-size__link">XS</a>
+                            <a href="#" class="menu-size__link menu-size__link--cannot">XS</a>
                         </li>
                         <li class="menu-size__item menu-size__item--active">
                             <a href="#" class="menu-size__link">S</a>
@@ -84,7 +84,7 @@
                             <a href="#" class="menu-size__link">2XL</a>
                         </li>
                         <li class="menu-size__item">
-                            <a href="#" class="menu-size__link">3XL</a>
+                            <a href="#" class="menu-size__link menu-size__link--cannot">3XL</a>
                         </li>
                     </ul>
                     <ul class="menu-color">
