--- a/products/product.html
+++ b/products/product.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
         <section class="hero">
             <header class="header">
-                <a href="#" class="logo">
+                <a href="./../index.html" class="logo">
                     <img src="./../img/web-ready/content/logos/logo-main.png" alt="lost shirt logo"
                         class="logo__pic">
                 </a>
