--- a/products/product.html
+++ b/products/product.html
@@ -244,6 +244,7 @@
                 </section>
             </div>
         </footer>
+        <script src="./../scripts/menu-size.js"></script>
     </div>
 </body>
 </html>
