--- a/products/product.html
+++ b/products/product.html
@@ -63,28 +63,44 @@
                 <div class="product__choice">
                     <ul class="menu-size">
                         <li class="menu-size__item">
-                            <a href="#" class="menu-size__link menu-size__link--cannot">XXS</a>
+                            <a href="#" class="menu-size__link menu-size__link--cannot">
+                                <div class="menu-size__text">XXS</div>
+                            </a>
                         </li>
                         <li class="menu-size__item">
-                            <a href="#" class="menu-size__link menu-size__link--cannot">XS</a>
-                        </li>
-                        <li class="menu-size__item menu-size__item--active">
-                            <a href="#" class="menu-size__link">S</a>
-                        </li>
-                        <li class="menu-size__item">
-                            <a href="#" class="menu-size__link">M</a>
+                            <a href="#" class="menu-size__link menu-size__link--cannot">
+                                <div class="menu-size__text">XS</div>
+                            </a>
                         </li>
                         <li class="menu-size__item">
-                            <a href="#" class="menu-size__link">L</a>
+                            <a href="#" class="menu-size__link menu-size__link--active">
+                                <div class="menu-size__text">S</div>
+                            </a>
                         </li>
                         <li class="menu-size__item">
-                            <a href="#" class="menu-size__link">XL</a>
+                            <a href="#" class="menu-size__link">
+                                <div class="menu-size__text">M</div>
+                            </a>
                         </li>
                         <li class="menu-size__item">
-                            <a href="#" class="menu-size__link">2XL</a>
+                            <a href="#" class="menu-size__link">
+                                <div class="menu-size__text">L</div>
+                            </a>
                         </li>
                         <li class="menu-size__item">
-                            <a href="#" class="menu-size__link menu-size__link--cannot">3XL</a>
+                            <a href="#" class="menu-size__link">
+                                <div class="menu-size__text">XL</div>
+                            </a>
+                        </li>
+                        <li class="menu-size__item">
+                            <a href="#" class="menu-size__link">
+                                <div class="menu-size__text">2XL</div>
+                            </a>
+                        </li>
+                        <li class="menu-size__item">
+                            <a href="#" class="menu-size__link menu-size__link--cannot">
+                                <div class="menu-size__text">3XL</div>
+                            </a>
                         </li>
                     </ul>
                     <ul class="menu-color">
@@ -105,7 +121,9 @@
                         </li>
                     </ul>
                     <div class="product__btn">
-                        <a href="#" class="btn__link">купить</a>
+                        <a href="#" class="btn__link">
+                            <div class="btn__text">купить</div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -245,6 +263,7 @@
             </div>
         </footer>
         <script src="./../scripts/menu-size.js"></script>
+        <script src="./../scripts/menu-color.js"></script>
     </div>
 </body>
 </html>
