--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                 <div class="products__desc-text">
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                                 </div>
-                                <a href="#" class="btn">
+                                <a href="./products/product.html" class="btn">
                                     Подробнее
                                 </a>
                             </div>
@@ -178,7 +178,7 @@
                                 <div class="products__desc-text">
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                                 </div>
-                                <a href="#" class="btn">
+                                <a href="./products/product.html" class="btn">
                                     Подробнее
                                 </a>
                             </div>
@@ -197,7 +197,7 @@
                                 <div class="products__desc-text">
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                                 </div>
-                                <a href="#" class="btn">
+                                <a href="./products/product.html" class="btn">
                                     Подробнее
                                 </a>
                             </div>
@@ -216,7 +216,7 @@
                                 <div class="products__desc-text">
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                                 </div>
-                                <a href="#" class="btn">
+                                <a href="./products/product.html" class="btn">
                                     Подробнее
                                 </a>
                             </div>
@@ -235,7 +235,7 @@
                                 <div class="products__desc-text">
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                                 </div>
-                                <a href="#" class="btn">
+                                <a href="./products/product.html" class="btn">
                                     Подробнее
                                 </a>
                             </div>
