--- a/products/product.html
+++ b/products/product.html
@@ -130,75 +130,77 @@
         </section>
 
         <section class="about-product">
-            <div class="about-product__menu">
-                <ul class="menu__list">
-                    <li class="menu__item">
-                        <a href="#" data-filter="desc" class="menu__link menu__link--active">описание</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#" data-filter="size-table" class="menu__link">таблица размеров</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#" data-filter="delivery" class="menu__link">условия доставки</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#" data-filter="about-manufacturer" class="menu__link">о бренде</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="about-product__list">
-                <div class="about-product__item--style-desc desc about-product__item about-product__item--active">
-                    <div class="about-product__how-wash">
-                        <ul class="how-wash__list">
-                            <li class="how-wash__item">
-                                <div class="item__ico">
-                                    <svg class="item__ico--style-wash1">
-                                        <use xlink:href="./../img/web-ready/icons-sprite.svg#washing_01"></use>
-                                    </svg>
-                                </div>
-                                <div class="item__text">Стирать при температуре 30°С</div>
-                            </li>
-                            <li class="how-wash__item">
-                                <div class="item__ico">
-                                    <svg class="item__ico--style-wash2">
-                                        <use xlink:href="./../img/web-ready/icons-sprite.svg#washing_02"></use>
-                                    </svg>
-                                </div>
-                                <div class="item__text">Не отбеливать</div>
-                            </li>
-                            <li class="how-wash__item">
-                                <div class="item__ico">
-                                    <svg class="item__ico--style-wash3">
-                                        <use xlink:href="./../img/web-ready/icons-sprite.svg#washing_03"></use>
-                                    </svg>
-                                </div>
-                                <div class="item__text">Гладить теплым утюгом<br>с внутренней стороны</div>
-                            </li>
-                            <li class="how-wash__item">
-                                <div class="item__ico">
-                                    <svg class="item__ico--style-wash4">
-                                        <use xlink:href="./../img/web-ready/icons-sprite.svg#washing_04"></use>
-                                    </svg>
-                                </div>
-                                <div class="item__text">Не подвергать химической чистке</div>
-                            </li>
-                            <li class="how-wash__item">
-                                <div class="item__ico">
-                                    <svg class="item__ico--style-wash5"> 
-                                        <use xlink:href="./../img/web-ready/icons-sprite.svg#washing_05"></use>
-                                    </svg>
-                                </div>
-                                <div class="item__text">Не сушить в барабане</div>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="about-product__desc">
-                        <div class="desc__text">Футболка из приятной ткани с качественным принтом, это одна из самых универсальных вещей в гардеробе. Она подойдет и для занятий спортом, и для прогулок, и для работы, если разрешен свободный дресс-код.</div>
-                    </div>
+            <div class="container footer__container">
+                <div class="about-product__menu">
+                    <ul class="menu__list">
+                        <li class="menu__item">
+                            <a href="#" data-filter="desc" class="menu__link menu__link--active">описание</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" data-filter="size-table" class="menu__link">таблица размеров</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" data-filter="delivery" class="menu__link">условия доставки</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" data-filter="about-manufacturer" class="menu__link">о бренде</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="about-product__item--style-size-table size-table about-product__item">a</div>
-                <div class="about-product__item--style-delivery delivery about-product__item">b</div>
-                <div class="about-product__item about-manufacturer about-product__item--style-about-manufacturer">c</div>
+                <div class="about-product__list">
+                    <div class="about-product__item--style-desc desc about-product__item">
+                        <div class="about-product__how-wash">
+                            <ul class="how-wash__list">
+                                <li class="how-wash__item">
+                                    <div class="item__ico">
+                                        <svg class="item__ico--style-wash1">
+                                            <use xlink:href="./../img/web-ready/icons-sprite.svg#washing_01"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="item__text">Стирать при температуре 30°С</div>
+                                </li>
+                                <li class="how-wash__item">
+                                    <div class="item__ico">
+                                        <svg class="item__ico--style-wash2">
+                                            <use xlink:href="./../img/web-ready/icons-sprite.svg#washing_02"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="item__text">Не отбеливать</div>
+                                </li>
+                                <li class="how-wash__item">
+                                    <div class="item__ico">
+                                        <svg class="item__ico--style-wash3">
+                                            <use xlink:href="./../img/web-ready/icons-sprite.svg#washing_03"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="item__text">Гладить теплым утюгом<br>с внутренней стороны</div>
+                                </li>
+                                <li class="how-wash__item">
+                                    <div class="item__ico">
+                                        <svg class="item__ico--style-wash4">
+                                            <use xlink:href="./../img/web-ready/icons-sprite.svg#washing_04"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="item__text">Не подвергать химической чистке</div>
+                                </li>
+                                <li class="how-wash__item">
+                                    <div class="item__ico">
+                                        <svg class="item__ico--style-wash5"> 
+                                            <use xlink:href="./../img/web-ready/icons-sprite.svg#washing_05"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="item__text">Не сушить в барабане</div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="about-product__desc">
+                            <div class="desc__text">Футболка из приятной ткани с качественным принтом, это одна из самых универсальных вещей в гардеробе. Она подойдет и для занятий спортом, и для прогулок, и для работы, если разрешен свободный дресс-код.</div>
+                        </div>
+                    </div>
+                    <div class="about-product__item--style-size-table size-table about-product__item">a</div>
+                    <div class="about-product__item--style-delivery delivery about-product__item">b</div>
+                    <div class="about-product__item about-manufacturer about-product__item--style-about-manufacturer">c</div>
+                </div>
             </div>
         </section>
 
